trying to fix smooth scrolling on mobile with adding webkit css rule to body

--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,7 @@ body {
   width: 100%;
   font-family: "Segoe UI", Tahoma, "Geneva", Verdana, sans-serif;
   scroll-behavior: smooth;
+  -webkit-overflow-scrolling: touch;
 }
 
 h1 {
